# sfumato

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  DEPLOYMENT_CONTRACT.md  Dockerfile  PROTOTYPING.md  README.md  WHISPER_TEMPLATE_CONTRACT.md  docker-compose.yml  plan.yaml  pyproject.toml  validate_deployment_contract.py
.agents/: instructions.md
docker/: entrypoint.sh  healthcheck.py
src/sfumato/: __main__.py  cli.py  config.py  layout_ai.py  llm.py  matcher.py  news.py  orchestrator.py  paintings.py  palette.py  proto.py  render.py  scheduler.py  state.py  tv.py
src/sfumato.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
templates/: art_minimal.html  art_overlay.html  gallery_wall.html  magazine.html  news_poster.html  painting_text.html  portrait.html
tests/: conftest.py  test_cli.py  test_config.py  test_deployment_contract.py  test_integration.py  test_layout_ai.py  test_llm.py  test_matcher.py  test_news.py  test_orchestrator.py  test_orchestrator_batching.py  test_paintings.py  test_palette.py  test_render.py  test_scheduler.py  test_state.py  test_tv.py
