[project]
name = "sfumato"
version = "0.1.0"
description = "Turn Samsung The Frame into a living art + news terminal"
requires-python = ">=3.12"
dependencies = [
    "samsungtvws[async,encrypted]",
    "playwright",
    "Pillow",
    "numpy",
    "feedparser",
    "httpx",
    "typer>=0.9",
]

[project.scripts]
sfumato = "sfumato.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
